--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="title_activity_promocao_list">Zapeat</string>
     <string name="web">Web</string>
     <string name="sair">Sair</string>
+    <string name="filtrar_distancia">Filtrar distância Máxima (m)</string>
     <string name="atualizar">Atualizado às \n 12:12:12 12:12</string>
     
 </resources>
