--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_browser">Zapeat</string>
     <string name="login">Login</string>
+    <string name="email">E-mail</string>
     <string name="senha">Senha</string>
     <string name="autenticar">Entrar</string>
     <string name="title_activity_list">Zapeat - Promoções</string>
